--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "firebase": "^12.2.1",
     "mysql2": "^3.14.3",
     "next": "15.5.0",
     "nodemailer": "^7.0.5",
