--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^12.2.1",
+    "lucide-react": "^0.544.0",
     "mysql2": "^3.14.3",
     "next": "15.5.0",
     "nodemailer": "^7.0.6",
